fix the style and website layout, define the app arcuitecture and add responsive design.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/9231/9231625.png" />
+  <link rel="icon" type="image/png" href="https://i.imgur.com/JQZSwXl.png" />
   <title>WeatherRadar</title>
 </head>
 <body>
